maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:8: error: illegal start of statement (no modifiers allowed here)
  case 1 =>override def run() {while (!isFacingWall()) {right()}; left();
           ^