maze.island.IslandMaze.scala.code

override def run() {var state=0;
state match  {
  case 0 => {while (!isFacingWall()) {forward()}}; // North runner

     state = 1;
  case 1 =>override def run() {while (!isFacingWall()) {right()}; left();
  while (!isOverBaggle) {while (!isFacingWall()) {forward(); right()}; left()}}// Left follower
     state = 0;
  case _ => println("This case should not happen. Please fix me")
}
 
}










